@@ -39,7 +39,7 @@ public class FeatureWrapperTest {
                         new Object[] {
                             "one",
                             Integer.valueOf(1),
-                            new Double(1.1),
+                            Double.valueOf(1.1),
                             gf.createPoint(new Coordinate(1, 1))
                         },
                         "fid.1"));
@@ -49,7 +49,7 @@ public class FeatureWrapperTest {
                         new Object[] {
                             "two",
                             Integer.valueOf(2),
-                            new Double(2.2),
+                            Double.valueOf(2.2),
                             gf.createPoint(new Coordinate(2, 2))
                         },
                         "fid.2"));
@@ -59,7 +59,7 @@ public class FeatureWrapperTest {
                         new Object[] {
                             "three",
                             Integer.valueOf(3),
-                            new Double(3.3),
+                            Double.valueOf(3.3),
                             gf.createPoint(new Coordinate(3, 3))
                         },
                         "fid.3"));
